<resources>
    <string name="app_name">DgAcademy</string>
    <string name="delete_publication">Publication has been deleted</string>
    <string name="draft_duplicated">Draft has been duplicated</string>
    <string name="draft_updated">Draft has been updated</string>
    <string name="draft_public">Draft has been updated to Public</string>
    <string name="draft_private">Draft has been updated to Private</string>
    <string name="profile_update">Profile has been updated</string>
    <string name="create_publication">Draft has been published</string>
    <string name="like">Like</string>
    <string name="unlike">Unlike</string>

    <!-- Login and registration -->
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="default_email">admin@mail.com</string>
    <string name="password">Password</string>
    <string name="default_password">admin1</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="do_not_have_an_account">Do not have an account?</string>

    <string name="com_auth0_client_id">I1a65AA02PGEuHn3ef6j6D2rSrRkqybq</string>
    <string name="com_auth0_domain">nookit.eu.auth0.com</string>

    <string name="graphCool_url">https://api.graph.cool/simple/v1/cjcnkimc02rhy0177ejct2ika</string>

    <!-- Errors -->
    <string name="network_error">Network Error</string>

    <!-- Menu -->
    <string name="menu">Menu</string>
    <string name="publications">Publications</string>
    <string name="dashboard">Dashboard</string>
    <string name="private_menu">Private</string>
    <string name="public_menu">Public</string>
    <string name="drafts">Drafts</string>

    <!-- Toolbar -->
    <string name="publication">Publication</string>
    <string name="draft">Draft</string>
    <string name="profile">Profile</string>
    <string name="notifications">Notifications</string>

    <!-- Dashboard -->
    <string name="total_likes">Total Likes</string>
    <string name="total_your_likes">Total Your Likes</string>
    <string name="total_publications">Total Publications</string>
    <string name="total_drafts">Total Drafts</string>

    <!-- Bio -->
    <string name="picture">Picture</string>
    <string name="about">About</string>

    <!-- Notifications -->
    <string name="deleted_notifications">Notification has been deleted</string>
    <string name="your_draft">your draft</string>
    <string name="your_publication">your publication</string>
    <string name="draft_deleted">Draft has been deleted</string>
    <string name="publication_deleted">Publication has been deleted</string>

    <!-- Draft Settings -->
    <string name="edit">Edit</string>
    <string name="draft_menu">Draft Menu</string>
    <string name="other">Other</string>
    <string name="edit_title">Title</string>
    <string name="sharing">Sharing</string>
    <string name="edit_markdown">Markdown</string>
    <string name="new_publication">New Publication</string>
    <string name="update_publication">Update Publication</string>
    <string name="duplicate">Duplicate</string>
    <string name="delete">Delete</string>
    <string name="make_public">Public</string>
</resources>
