<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:gravity="center_vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:layout_height="match_parent">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_gravity="center_vertical"
        android:layout_height="56dp">

        <ImageView
            android:src="@drawable/ic_email_black_36dp"
            android:layout_gravity="center_vertical"
            android:tint="@color/colorWhiteAccent"
            android:layout_width="36dp"
            android:layout_height="36dp" />

        <EditText
            android:layout_marginLeft="20dp"
            android:hint="@string/email"
            android:id="@+id/login_email"
            android:text="@string/default_email"
            android:textColor="@color/colorWhiteAccent"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_gravity="center_vertical"
        android:layout_height="56dp">

        <ImageView
            android:src="@drawable/ic_lock_black_36dp"
            android:layout_gravity="center_vertical"
            android:tint="@color/colorWhiteAccent"
            android:layout_width="36dp"
            android:layout_height="36dp" />

        <EditText
            android:layout_marginLeft="20dp"
            android:hint="@string/password"
            android:text="@string/default_password"
            android:id="@+id/login_password"
            android:textColor="@color/colorWhiteAccent"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>


    <TextView
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:id="@+id/login_to_sign_up"
        android:textSize="18sp"
        android:gravity="center"
        android:textColor="@color/colorWhiteAccent"
        android:text="@string/do_not_have_an_account"
        android:layout_width="match_parent"
        android:layout_height="56dp" />

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:text="@string/login"
        android:textColor="@color/colorWhiteAccent"
        android:background="@color/colorAccent"
        android:layout_height="wrap_content" />

</LinearLayout>