<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorAccent"
        android:elevation="4dp"
        android:gravity="center_vertical"
        app:contentInsetStart="8dp">

        <ImageView
            android:id="@+id/toolbar_menu"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:src="@drawable/ic_menu_black_36dp"
            android:tint="@color/colorWhite" />

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="28dp"
            android:text="@string/draft_menu"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:textStyle="bold" />


    </android.support.v7.widget.Toolbar>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBlackAccent"
        android:paddingLeft="16dp"
        android:paddingVertical="4dp"
        android:text="@string/edit"
        android:textColor="@color/colorWhiteAccentDark">

    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="16dp">


        <LinearLayout
            android:id="@+id/draft_edit_title"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginRight="20dp"
                android:src="@drawable/ic_edit_black_36dp"
                android:tint="@color/colorAccentSecond" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/edit_title"
                android:textColor="@color/colorWhite"
                android:textSize="18sp" />


            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="0"
                android:src="@drawable/ic_keyboard_arrow_right_black_36dp"
                android:tint="@color/colorWhiteAccentDark" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimaryAccent" />

    </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBlackAccent"
            android:paddingLeft="16dp"
            android:paddingVertical="4dp"
            android:text="@string/sharing"
            android:textColor="@color/colorWhiteAccentDark">

        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="16dp">


            <LinearLayout
                android:id="@+id/draft_new_publication"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginRight="20dp"
                    android:src="@drawable/ic_send_black_36dp"
                    android:tint="@color/colorAccentSecond" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/new_publication"
                    android:textColor="@color/colorWhite"
                    android:textSize="18sp" />


                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0"
                    android:src="@drawable/ic_keyboard_arrow_right_black_36dp"
                    android:tint="@color/colorWhiteAccentDark" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimaryAccent" />

        </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="16dp">


        <LinearLayout
            android:id="@+id/update_publication"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginRight="20dp"
                android:src="@drawable/ic_update_black_36dp"
                android:tint="@color/colorAccentSecond" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/update_publication"
                android:textColor="@color/colorWhite"
                android:textSize="18sp" />


            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="0"
                android:src="@drawable/ic_keyboard_arrow_right_black_36dp"
                android:tint="@color/colorWhiteAccentDark" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimaryAccent" />

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="16dp">


        <LinearLayout
            android:id="@+id/draft_make_public"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginRight="20dp"
                android:src="@drawable/ic_public_black_36dp"
                android:tint="@color/colorAccentSecond" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/make_public"
                android:textColor="@color/colorWhite"
                android:textSize="18sp" />

            <Switch
                android:id="@+id/draft_make_public_switch"
                android:layout_weight="0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBlackAccent"
        android:paddingLeft="16dp"
        android:paddingVertical="4dp"
        android:text="@string/other"
        android:textColor="@color/colorWhiteAccentDark"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="16dp">


        <LinearLayout
            android:id="@+id/draft_duplicate"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginRight="20dp"
                android:src="@drawable/ic_content_copy_black_36dp"
                android:tint="@color/colorAccentSecond" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/duplicate"
                android:textColor="@color/colorWhite"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimaryAccent" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="16dp">


        <LinearLayout
            android:id="@+id/draft_delete"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:tint="@color/colorPrimaryDark"
                android:layout_marginRight="20dp"
                android:src="@drawable/ic_delete_black_36dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/delete"
                android:textColor="@color/colorWhite"
                android:textSize="18sp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimaryAccent" />

    </LinearLayout>


</LinearLayout>