<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">


    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorAccent"
        android:elevation="4dp"
        android:gravity="center_vertical"
        app:contentInsetStart="8dp">

        <ImageView
            android:id="@+id/toolbar_menu"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:src="@drawable/ic_menu_black_36dp"
            android:tint="@color/colorWhite" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="28dp"
            android:text="@string/notifications"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:textStyle="bold" />


    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/publications"
                android:textColor="@color/colorWhiteAccentDark"
                android:background="@color/colorBlackAccent"
                android:paddingLeft="16dp"
                android:paddingVertical="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </TextView>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/publications_recycler_view"
                android:layout_width="match_parent"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:clipToPadding="false"
                android:layout_height="wrap_content"/>


            <TextView
                android:text="@string/drafts"
                android:textColor="@color/colorWhiteAccentDark"
                android:background="@color/colorBlackAccent"
                android:paddingLeft="16dp"
                android:paddingVertical="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </TextView>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/drafts_recycler_view"
                android:layout_width="match_parent"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:clipToPadding="false"
                android:layout_height="wrap_content"/>


        </LinearLayout>


    </ScrollView>
</LinearLayout>